backend/app/evidence_out/vpc_network_20260318_104552.json
{
  "collector": "vpc_network",
  "account_id": "405466951861",
  "region": "ap-south-1",
  "collected_at": "2026-03-18T10:45:52.962153",
  "vpcs": [
    {
      "OwnerId": "405466951861",
      "InstanceTenancy": "default",
      "CidrBlockAssociationSet": [
        {
          "AssociationId": "vpc-cidr-assoc-0c97c053702025c38",
          "CidrBlock": "172.31.0.0/16",
          "CidrBlockState": {
            "State": "associated"
          }
        }
      ],
      "IsDefault": true,
      "BlockPublicAccessStates": {
        "InternetGatewayBlockMode": "off"
      },
      "VpcId": "vpc-0216f9b81fd2b7025",
      "State": "available",
      "CidrBlock": "172.31.0.0/16",
      "DhcpOptionsId": "dopt-087b6aff21b15f9ce"
    }
  ],
  "subnets": [
    {
      "AvailabilityZoneId": "aps1-az2",
      "MapCustomerOwnedIpOnLaunch": false,
      "OwnerId": "405466951861",
      "AssignIpv6AddressOnCreation": false,
      "Ipv6CidrBlockAssociationSet": [],
      "SubnetArn": "arn:aws:ec2:ap-south-1:405466951861:subnet/subnet-06d9054644350c08c",
      "EnableDns64": false,
      "Ipv6Native": false,
      "PrivateDnsNameOptionsOnLaunch": {
        "HostnameType": "ip-name",
        "EnableResourceNameDnsARecord": false,
        "EnableResourceNameDnsAAAARecord": false
      },
      "BlockPublicAccessStates": {
        "InternetGatewayBlockMode": "off"
      },
      "SubnetId": "subnet-06d9054644350c08c",
      "State": "available",
      "VpcId": "vpc-0216f9b81fd2b7025",
      "CidrBlock": "172.31.16.0/20",
      "AvailableIpAddressCount": 4091,
      "AvailabilityZone": "ap-south-1c",
      "DefaultForAz": true,
      "MapPublicIpOnLaunch": true
    },
    {
      "AvailabilityZoneId": "aps1-az1",
      "MapCustomerOwnedIpOnLaunch": false,
      "OwnerId": "405466951861",
      "AssignIpv6AddressOnCreation": false,
      "Ipv6CidrBlockAssociationSet": [],
      "SubnetArn": "arn:aws:ec2:ap-south-1:405466951861:subnet/subnet-061038544d81371d7",
      "EnableDns64": false,
      "Ipv6Native": false,
      "PrivateDnsNameOptionsOnLaunch": {
        "HostnameType": "ip-name",
        "EnableResourceNameDnsARecord": false,
        "EnableResourceNameDnsAAAARecord": false
      },
      "BlockPublicAccessStates": {
        "InternetGatewayBlockMode": "off"
      },
      "SubnetId": "subnet-061038544d81371d7",
      "State": "available",
      "VpcId": "vpc-0216f9b81fd2b7025",
      "CidrBlock": "172.31.32.0/20",
      "AvailableIpAddressCount": 4091,
      "AvailabilityZone": "ap-south-1a",
      "DefaultForAz": true,
      "MapPublicIpOnLaunch": true
    },
    {
      "AvailabilityZoneId": "aps1-az3",
      "MapCustomerOwnedIpOnLaunch": false,
      "OwnerId": "405466951861",
      "AssignIpv6AddressOnCreation": false,
      "Ipv6CidrBlockAssociationSet": [],
      "SubnetArn": "arn:aws:ec2:ap-south-1:405466951861:subnet/subnet-0d758d94ce0d57c94",
      "EnableDns64": false,
      "Ipv6Native": false,
      "PrivateDnsNameOptionsOnLaunch": {
        "HostnameType": "ip-name",
        "EnableResourceNameDnsARecord": false,
        "EnableResourceNameDnsAAAARecord": false
      },
      "BlockPublicAccessStates": {
        "InternetGatewayBlockMode": "off"
      },
      "SubnetId": "subnet-0d758d94ce0d57c94",
      "State": "available",
      "VpcId": "vpc-0216f9b81fd2b7025",
      "CidrBlock": "172.31.0.0/20",
      "AvailableIpAddressCount": 4091,
      "AvailabilityZone": "ap-south-1b",
      "DefaultForAz": true,
      "MapPublicIpOnLaunch": true
    }
  ],
  "route_tables": [
    {
      "Associations": [
        {
          "Main": true,
          "RouteTableAssociationId": "rtbassoc-0ade0611a49439021",
          "RouteTableId": "rtb-02f8ed3afa3c01d8b",
          "AssociationState": {
            "State": "associated"
          }
        }
      ],
      "PropagatingVgws": [],
      "RouteTableId": "rtb-02f8ed3afa3c01d8b",
      "Routes": [
        {
          "DestinationCidrBlock": "172.31.0.0/16",
          "GatewayId": "local",
          "Origin": "CreateRouteTable",
          "State": "active"
        },
        {
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": "igw-006ac63047f945be7",
          "Origin": "CreateRoute",
          "State": "active"
        }
      ],
      "Tags": [],
      "VpcId": "vpc-0216f9b81fd2b7025",
      "OwnerId": "405466951861"
    }
  ],
  "internet_gateways": [
    {
      "Attachments": [
        {
          "State": "available",
          "VpcId": "vpc-0216f9b81fd2b7025"
        }
      ],
      "InternetGatewayId": "igw-006ac63047f945be7",
      "OwnerId": "405466951861",
      "Tags": []
    }
  ],
  "nat_gateways": [],
  "flow_logs": [],
  "security_groups": [
    {
      "GroupId": "sg-09997995666d806de",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-0216f9b81fd2b7025",
      "SecurityGroupArn": "arn:aws:ec2:ap-south-1:405466951861:security-group/sg-09997995666d806de",
      "OwnerId": "405466951861",
      "GroupName": "default",
      "Description": "default VPC security group",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [
            {
              "UserId": "405466951861",
              "GroupId": "sg-09997995666d806de"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    }
  ],
  "network_acls": [
    {
      "Associations": [
        {
          "NetworkAclAssociationId": "aclassoc-0564cd79623da0dc7",
          "NetworkAclId": "acl-08df0e86d522c019d",
          "SubnetId": "subnet-06d9054644350c08c"
        },
        {
          "NetworkAclAssociationId": "aclassoc-00d878a4e662ae68d",
          "NetworkAclId": "acl-08df0e86d522c019d",
          "SubnetId": "subnet-061038544d81371d7"
        },
        {
          "NetworkAclAssociationId": "aclassoc-0bb1d7a5005d2eddb",
          "NetworkAclId": "acl-08df0e86d522c019d",
          "SubnetId": "subnet-0d758d94ce0d57c94"
        }
      ],
      "Entries": [
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        }
      ],
      "IsDefault": true,
      "NetworkAclId": "acl-08df0e86d522c019d",
      "Tags": [],
      "VpcId": "vpc-0216f9b81fd2b7025",
      "OwnerId": "405466951861"
    }
  ],
  "vpc_peering_connections": [],
  "vpn_connections": [],
  "vpc_endpoints": []
}
